--- a/Sit_on_chair_template_OBOWIAZKOWE/index.html
+++ b/Sit_on_chair_template_OBOWIAZKOWE/index.html
@@ -9,18 +9,17 @@
 </head>
 
 <body>
-<header>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <p>sit <span>on</span> chair</p>
-      </div>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p>sit <span>on</span> chair</p>
+        </div>
         <nav class="col">
           <ul>
             <li class="main-menu">
               <a href="#">o firmie</a>
-            </li>
-              <ul class="hidden">
+              <ul class="dropdown-menu">
                 <li>
                   <a href="#">Aktualności</a>
                 </li>
@@ -31,6 +30,7 @@
                   <a href="#">Historia</a>
                 </li>
               </ul>
+            </li>
             <li class="main-menu">
               <a href="#">galeria</a>
             </li>
@@ -39,95 +39,192 @@
             </li>
           </ul>
         </nav>
+      </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<section class="banner">
-  <div class="container">
+  <section class="banner">
+    <div class="container">
 
-
-    <span class="left-arrow"> &lt;</span>
+      <span class="left-arrow"> &lt;</span>
       <span class="right-arrow"> &gt;</span>
-    <div class="row">
-      <div class="col chair">
-      </div>
-      <div class="col">
-        <h1>Sit <span>on </span>our <span>chair</span></h1>
-        <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna.</p>
-        <div class="button-info">
-          <a href="#">zobacz więcej</a>
+      <div class="row">
+        <div class="col chair">
+        </div>
+        <div class="col">
+          <h1>Sit <span>on </span>our <span>chair</span></h1>
+          <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna.</p>
+          <div class="button-info">
+            <a href="#">zobacz więcej</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col chair01">
-        <div class="offer-box">
-          <div class="offer-box_details">
-            <p>Chair CLAIR</p>
-              </div>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col chair01">
+          <div class="offer-box">
+            <div class="offer-box_details">
+              <p>Chair CLAIR</p>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col chair02">
+        <div class="col chair02">
 
-        <div class="offer-box">
-          <div class="offer-box_details">
-            <p>Chair MARGARITA</p>
+          <div class="offer-box">
+            <div class="offer-box_details">
+              <p>Chair MARGARITA</p>
 
+            </div>
+          </div>
+        </div>
+        <div class="col offer-info">
+          <div class="offer-box">
+            <div class="">
+              <p>Finds all inputs</p>
+              <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. <br /><br /> Ut molestie a, ultricies porta urna.Vestibulum commodo volutpat a, convallis ac, laoreet enim. </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-      <div class="col">
-        <div class="offer-box">
-          <div class="offer-info">
-            <p>Finds all inputs</p>
-            <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. <br /><br /> Ut molestie a, ultricies porta urna.Vestibulum commodo volutpat a, convallis ac, laoreet enim. </p>
+  </section>
+
+  <section class="price-list">
+    <div class="container">
+      <div class="row">
+        <div class="price-list_label">
+          cennik
         </div>
-      </div>
-    </div>
-  </div>
+        <div class="col price-option">
+
+
+    <div class="box-big">
+
+      <div class="circle-big">
+
+        <div class="circle-small">
+        </div>
 </div>
-</section>
+      <div>
+        <h2>basic plan</h2>
+        <div class="circle-price_amount">
+          <p>85<sup>99</sup></p><p>PLN/MSC</p>
+        </div>
+        <div class="service-details">
+          <p>Zakup towaru + dowóz</p>
+          <p>Serwis</p>
+        </div>
+        <div class="button-join">
+          <p>dołącz</p>
 
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col">
+        </div>
       </div>
-      <div class="col">
+
+    </div>
+
+        </div>
+        <div class="col price-option">
+
+
+    <div class="box-big">
+
+      <div class="circle-big">
+
+        <div class="circle-small">
+        </div>
+</div>
+      <div>
+        <h2>standard plan</h2>
+        <div class="circle-price_amount">
+          <p>95<sup>99</sup></p><p>PLN/MSC</p>
+        </div>
+        <div class="service-details">
+          <p>Zakup towaru + dowóz</p>
+          <p>Serwis</p>
+          <p>Gwarancja 5 lat</p>
+        </div>
+        <div class="button-join">
+          <p>dołącz</p>
+
+        </div>
       </div>
-      <div class="col">
+
+    </div>
+
+        </div>
+        <div class="col price-option">
+
+
+    <div class="box-big">
+
+      <div class="circle-big">
+
+        <div class="circle-small">
+        </div>
+</div>
+      <div>
+        <h2>advance plan</h2>
+        <div class="circle-price_amount">
+          <p>211<sup>99</sup></p><p>PLN/MSC</p>
+
+        </div>
+        <div class="service-details">
+          <p>Zakup towaru + dowóz</p>
+          <p>Serwis</p>
+          <p>Gwarancja 5 lat</p>
+          <p>Porady projektanta</p>
+        </div>
+        <div class="button-join">
+          <p>dołącz</p>
+
+        </div>
+      </div>
+
+    </div>
+
+        </div>
+      </div>
+  </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col contact-form">
+
+  <form class="contact-form" action="" method="post" name="contact">
+  <input type="text" name="name" placeholder="Imię"/>
+  <input type="email" name="email" placeholder="email"/>
+  <textarea name="about" placeholder="Wiadomość"></textarea>
+
+          </form>
+        </div>
+        <div class="col agreement">
+          <img src="images/red_chair.png" />
+            <!-- <form class="contact-form" action="" method="post" name="">
+              <input type="checkbox" name="agreement" value="yes" /><p>Zgadzam się na przetwarzanie danych osobowych</p>
+
+            </form> -->
+
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-      </div>
-      <div class="col">
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+        </div>
+        <div class="col">
+        </div>
       </div>
     </div>
-  </div>
-</section>
-
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-      </div>
-      <div class="col">
-      </div>
-    </div>
-  </div>
-</footer>
+  </footer>
 
 </body>
 
