Project_01_main_layout_part_3

--- a/Sit_on_chair_template_OBOWIAZKOWE/index.html
+++ b/Sit_on_chair_template_OBOWIAZKOWE/index.html
@@ -102,113 +102,114 @@
         <div class="col price-option">
 
 
-    <div class="box-big">
+          <div class="box-big">
 
-      <div class="circle-big">
+            <div class="circle-big">
 
-        <div class="circle-small">
-        </div>
-</div>
-      <div>
-        <h2>basic plan</h2>
-        <div class="circle-price_amount">
-          <p>85<sup>99</sup></p><p>PLN/MSC</p>
-        </div>
-        <div class="service-details">
-          <p>Zakup towaru + dowóz</p>
-          <p>Serwis</p>
-        </div>
-        <div class="button-join">
-          <p>dołącz</p>
+              <div class="circle-small">
+              </div>
+            </div>
+            <div>
+              <h2>basic plan</h2>
+              <div class="circle-price_amount">
+                <p>85<sup>99</sup></p>
+                <p>PLN/MSC</p>
+              </div>
+              <div class="service-details">
+                <p>Zakup towaru + dowóz</p>
+                <p>Serwis</p>
+              </div>
+              <div class="button-join">
+                <p>dołącz</p>
+              </div>
+            </div>
 
-        </div>
-      </div>
-
-    </div>
-
-        </div>
-        <div class="col price-option">
-
-
-    <div class="box-big">
-
-      <div class="circle-big">
-
-        <div class="circle-small">
-        </div>
-</div>
-      <div>
-        <h2>standard plan</h2>
-        <div class="circle-price_amount">
-          <p>95<sup>99</sup></p><p>PLN/MSC</p>
-        </div>
-        <div class="service-details">
-          <p>Zakup towaru + dowóz</p>
-          <p>Serwis</p>
-          <p>Gwarancja 5 lat</p>
-        </div>
-        <div class="button-join">
-          <p>dołącz</p>
-
-        </div>
-      </div>
-
-    </div>
+          </div>
 
         </div>
         <div class="col price-option">
 
 
-    <div class="box-big">
+          <div class="box-big">
 
-      <div class="circle-big">
+            <div class="circle-big">
 
-        <div class="circle-small">
-        </div>
-</div>
-      <div>
-        <h2>advance plan</h2>
-        <div class="circle-price_amount">
-          <p>211<sup>99</sup></p><p>PLN/MSC</p>
+              <div class="circle-small">
+              </div>
+            </div>
+            <div>
+              <h2>standard plan</h2>
+              <div class="circle-price_amount">
+                <p>95<sup>99</sup></p>
+                <p>PLN/MSC</p>
+              </div>
+              <div class="service-details">
+                <p>Zakup towaru + dowóz</p>
+                <p>Serwis</p>
+                <p>Gwarancja 5 lat</p>
+              </div>
+              <div class="button-join">
+                <p>dołącz</p>
+
+              </div>
+            </div>
+
+          </div>
 
         </div>
-        <div class="service-details">
-          <p>Zakup towaru + dowóz</p>
-          <p>Serwis</p>
-          <p>Gwarancja 5 lat</p>
-          <p>Porady projektanta</p>
-        </div>
-        <div class="button-join">
-          <p>dołącz</p>
+        <div class="col price-option">
+
+
+          <div class="box-big">
+
+            <div class="circle-big">
+
+              <div class="circle-small">
+              </div>
+            </div>
+            <div>
+              <h2>advance plan</h2>
+              <div class="circle-price_amount">
+                <p>211<sup>99</sup></p>
+                <p>PLN/MSC</p>
+
+              </div>
+              <div class="service-details">
+                <p>Zakup towaru + dowóz</p>
+                <p>Serwis</p>
+                <p>Gwarancja 5 lat</p>
+                <p>Porady projektanta</p>
+              </div>
+              <div class="button-join">
+                <p>dołącz</p>
+
+              </div>
+            </div>
+
+          </div>
 
         </div>
       </div>
-
     </div>
-
-        </div>
-      </div>
-  </div>
   </section>
 
   <section>
     <div class="container">
       <div class="row">
         <div class="col contact-form">
+          <h2>Kontakt</h2>
 
-  <form class="contact-form" action="" method="post" name="contact">
-  <input type="text" name="name" placeholder="Imię"/>
-  <input type="email" name="email" placeholder="email"/>
-  <textarea name="about" placeholder="Wiadomość"></textarea>
+          <form class="contact-form" action="" method="post" name="contact">
+            <input type="text" name="name" placeholder="Imię" />
+            <input type="email" name="email" placeholder="email" />
+            <textarea name="about" placeholder="Wiadomość"></textarea>
 
           </form>
         </div>
         <div class="col agreement">
           <img src="images/red_chair.png" />
-            <!-- <form class="contact-form" action="" method="post" name="">
-              <input type="checkbox" name="agreement" value="yes" /><p>Zgadzam się na przetwarzanie danych osobowych</p>
-
-            </form> -->
+        <img class="checkbox" src="images/form_ok.jpg" />
+        <p>Zgadzam się na przetwarzanie danych osobowych</p>
 
         </div>
       </div>
@@ -218,9 +219,17 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col copyright">
+          Copyright 2014 | All Rights Reserved. - Sit On Chair
         </div>
-        <div class="col">
+        <div class="social">
+          <div class="col sm_icons">
+            <img src="images/flickr.png" />
+            <img src="images/vimeo.png" />
+            <img src="images/pinterest.png" />
+            <img src="images/twitter.png" />
+          </div>
+              <p>sit <strong>on</strong> chair</p>
         </div>
       </div>
     </div>
