Project_01_main_layout_part_4

--- a/Sit_on_chair_template_OBOWIAZKOWE/index.html
+++ b/Sit_on_chair_template_OBOWIAZKOWE/index.html
@@ -13,7 +13,9 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <p>sit <span>on</span> chair</p>
+          <a href="#">
+            <p>sit <span>on</span> chair</p>
+          </a>
         </div>
         <nav class="col">
           <ul>
@@ -45,29 +47,34 @@
 
   <section class="banner">
     <div class="container">
-
-      <span class="left-arrow"> &lt;</span>
-      <span class="right-arrow"> &gt;</span>
       <div class="row">
-        <div class="col chair">
+        <a href="#">
+          <div class="arrow">&lt;</div>
+        </a>
+        <a href="#">
+          <div class="arrow right">&gt;</div>
+        </a>
+        <div class="col img-chair">
         </div>
         <div class="col">
           <h1>Sit <span>on </span>our <span>chair</span></h1>
           <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna.</p>
-          <div class="button-info">
-            <a href="#">zobacz więcej</a>
-          </div>
+          <a href="#">
+            <div class="button-info">
+              zobacz więcej
+            </div>
+          </a>
         </div>
       </div>
     </div>
   </section>
 
-  <section>
+  <section class="offer">
     <div class="container">
       <div class="row">
         <div class="col chair01">
           <div class="offer-box">
-            <div class="offer-box_details">
+            <div class="offer-box_info">
               <p>Chair CLAIR</p>
             </div>
           </div>
@@ -75,7 +82,7 @@
         <div class="col chair02">
 
           <div class="offer-box">
-            <div class="offer-box_details">
+            <div class="offer-box_info">
               <p>Chair MARGARITA</p>
 
             </div>
@@ -83,7 +90,7 @@
         </div>
         <div class="col offer-info">
           <div class="offer-box">
-            <div class="">
+            <div>
               <p>Finds all inputs</p>
               <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. <br /><br /> Ut molestie a, ultricies porta urna.Vestibulum commodo volutpat a, convallis ac, laoreet enim. </p>
             </div>
@@ -120,7 +127,9 @@
                 <p>Serwis</p>
               </div>
               <div class="button-join">
-                <p>dołącz</p>
+                <a href="#">
+                  <p>dołącz</p>
+                </a>
               </div>
             </div>
 
@@ -149,7 +158,9 @@
                 <p>Gwarancja 5 lat</p>
               </div>
               <div class="button-join">
-                <p>dołącz</p>
+                <a href="#">
+                  <p>dołącz</p>
+                </a>
 
               </div>
             </div>
@@ -181,7 +192,9 @@
                 <p>Porady projektanta</p>
               </div>
               <div class="button-join">
-                <p>dołącz</p>
+                <a href="#">
+                  <p>dołącz</p>
+                </a>
 
               </div>
             </div>
@@ -199,7 +212,7 @@
         <div class="col contact-form">
           <h2>Kontakt</h2>
 
-          <form class="contact-form" action="" method="post" name="contact">
+          <form action="" method="post" name="contact">
             <input type="text" name="name" placeholder="Imię" />
             <input type="email" name="email" placeholder="email" />
             <textarea name="about" placeholder="Wiadomość"></textarea>
@@ -207,10 +220,18 @@
           </form>
         </div>
         <div class="col agreement">
-          <img src="images/red_chair.png" />
-        <img class="checkbox" src="images/form_ok.jpg" />
-        <p>Zgadzam się na przetwarzanie danych osobowych</p>
-
+          <div>
+            <img src="images/red_chair.png" />
+          </div>
+          <div>
+            <div class="form-ok">
+              <img class="checkbox" src="images/form_ok.jpg" />
+            </div>
+            <p>Zgadzam się na przetwarzanie danych osobowych</p>
+          </div>
+          <a href="#">
+            <div class="button-send">wyślij</div>
+          </a>
         </div>
       </div>
     </div>
@@ -224,12 +245,20 @@
         </div>
         <div class="social">
           <div class="col sm_icons">
+            <a href="#">
             <img src="images/flickr.png" />
+            </a>
+            <a href="#">
             <img src="images/vimeo.png" />
+          </a>
+            <a href="#">
             <img src="images/pinterest.png" />
+          </a>
+            <a href="#">
             <img src="images/twitter.png" />
+          </a>
           </div>
-              <p>sit <strong>on</strong> chair</p>
+          <p>sit <strong>on</strong> chair</p>
         </div>
       </div>
     </div>
