Project_01_main_layout_part_5

--- a/Sit_on_chair_template_OBOWIAZKOWE/index.html
+++ b/Sit_on_chair_template_OBOWIAZKOWE/index.html
@@ -20,6 +20,7 @@
         <nav class="col">
           <ul>
             <li class="main-menu">
+
               <a href="#">o firmie</a>
               <ul class="dropdown-menu">
                 <li>
@@ -52,17 +53,15 @@
           <div class="arrow">&lt;</div>
         </a>
         <a href="#">
-          <div class="arrow right">&gt;</div>
+          <div class="arrow arrow-right">&gt;</div>
         </a>
         <div class="col img-chair">
         </div>
         <div class="col">
           <h1>Sit <span>on </span>our <span>chair</span></h1>
           <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna.</p>
-          <a href="#">
-            <div class="button-info">
-              zobacz więcej
-            </div>
+          <a href="#" class="button-info">
+            zobacz więcej
           </a>
         </div>
       </div>
@@ -74,26 +73,18 @@
       <div class="row">
         <div class="col chair01">
           <div class="offer-box">
-            <div class="offer-box_info">
-              <p>Chair CLAIR</p>
-            </div>
+            <p>Chair CLAIR</p>
           </div>
         </div>
         <div class="col chair02">
-
           <div class="offer-box">
-            <div class="offer-box_info">
-              <p>Chair MARGARITA</p>
-
-            </div>
+            <p>Chair MARGARITA</p>
           </div>
         </div>
         <div class="col offer-info">
-          <div class="offer-box">
-            <div>
-              <p>Finds all inputs</p>
-              <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. <br /><br /> Ut molestie a, ultricies porta urna.Vestibulum commodo volutpat a, convallis ac, laoreet enim. </p>
-            </div>
+          <div>
+            <p>Finds all inputs</p>
+            <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. <br /><br /> Ut molestie a, ultricies porta urna.Vestibulum commodo volutpat a, convallis ac, laoreet enim. </p>
           </div>
         </div>
       </div>
@@ -107,12 +98,8 @@
           cennik
         </div>
         <div class="col price-option">
-
-
-          <div class="box-big">
-
+          <div class="price-box">
             <div class="circle-big">
-
               <div class="circle-small">
               </div>
             </div>
@@ -126,23 +113,15 @@
                 <p>Zakup towaru + dowóz</p>
                 <p>Serwis</p>
               </div>
-              <div class="button-join">
-                <a href="#">
-                  <p>dołącz</p>
-                </a>
-              </div>
+              <a href="#" class="button-join">
+                <p>dołącz</p>
+              </a>
             </div>
-
           </div>
-
         </div>
         <div class="col price-option">
-
-
-          <div class="box-big">
-
+          <div class="price-box">
             <div class="circle-big">
-
               <div class="circle-small">
               </div>
             </div>
@@ -157,24 +136,15 @@
                 <p>Serwis</p>
                 <p>Gwarancja 5 lat</p>
               </div>
-              <div class="button-join">
-                <a href="#">
-                  <p>dołącz</p>
-                </a>
-
-              </div>
+              <a href="#" class="button-join">
+                <p>dołącz</p>
+              </a>
             </div>
-
           </div>
-
         </div>
         <div class="col price-option">
-
-
-          <div class="box-big">
-
+          <div class="price-box">
             <div class="circle-big">
-
               <div class="circle-small">
               </div>
             </div>
@@ -183,7 +153,6 @@
               <div class="circle-price_amount">
                 <p>211<sup>99</sup></p>
                 <p>PLN/MSC</p>
-
               </div>
               <div class="service-details">
                 <p>Zakup towaru + dowóz</p>
@@ -191,32 +160,25 @@
                 <p>Gwarancja 5 lat</p>
                 <p>Porady projektanta</p>
               </div>
-              <div class="button-join">
-                <a href="#">
-                  <p>dołącz</p>
-                </a>
-
-              </div>
+              <a href="#" class="button-join">
+                <p>dołącz</p>
+              </a>
             </div>
-
           </div>
-
         </div>
       </div>
     </div>
   </section>
 
-  <section>
+  <section class="contact">
     <div class="container">
       <div class="row">
         <div class="col contact-form">
           <h2>Kontakt</h2>
-
           <form action="" method="post" name="contact">
             <input type="text" name="name" placeholder="Imię" />
             <input type="email" name="email" placeholder="email" />
             <textarea name="about" placeholder="Wiadomość"></textarea>
-
           </form>
         </div>
         <div class="col agreement">
@@ -229,8 +191,8 @@
             </div>
             <p>Zgadzam się na przetwarzanie danych osobowych</p>
           </div>
-          <a href="#">
-            <div class="button-send">wyślij</div>
+          <a href="#" class="button-send">
+            wyślij
           </a>
         </div>
       </div>
@@ -246,17 +208,17 @@
         <div class="social">
           <div class="col sm_icons">
             <a href="#">
-            <img src="images/flickr.png" />
+              <img src="images/flickr.png" />
             </a>
             <a href="#">
-            <img src="images/vimeo.png" />
-          </a>
+              <img src="images/vimeo.png" />
+            </a>
             <a href="#">
-            <img src="images/pinterest.png" />
-          </a>
+              <img src="images/pinterest.png" />
+            </a>
             <a href="#">
-            <img src="images/twitter.png" />
-          </a>
+              <img src="images/twitter.png" />
+            </a>
           </div>
           <p>sit <strong>on</strong> chair</p>
         </div>
