--- a/index.html
+++ b/index.html
@@ -50,12 +50,17 @@
     <div class="container">
       <div class="row">
         <a href="#">
-          <div class="arrow">&lt;</div>
+          <div class="arrow arrow-left">&lt;</div>
         </a>
         <a href="#">
           <div class="arrow arrow-right">&gt;</div>
         </a>
         <div class="col img-chair">
+          <ul>
+            <li><img src="images/black_chair.png" alt="black chair" /></li>
+            <li><img src="images/red.png" alt="red chair" /></li>
+            <li><img src="images/orange.png" alt="orange chair" /></li>
+          </ul>
         </div>
         <div class="col">
           <h1>Sit <span>on </span>our <span>chair</span></h1>
@@ -71,12 +76,12 @@
   <section class="offer">
     <div class="container">
       <div class="row">
-        <div class="col chair01">
+        <div class="col chair01" title="Chair CLAIR">
           <div class="offer-box">
             <p>Chair CLAIR</p>
           </div>
         </div>
-        <div class="col chair02">
+        <div class="col chair02" title="Chair MARGARITA">
           <div class="offer-box">
             <p>Chair MARGARITA</p>
           </div>
@@ -183,11 +188,11 @@
         </div>
         <div class="col agreement">
           <div>
-            <img src="images/red_chair.png" />
+            <img src="images/red_chair.png" alt="red chair"/>
           </div>
           <div>
             <div class="form-ok">
-              <img class="checkbox" src="images/form_ok.jpg" />
+              <img class="checkbox" src="images/form_ok.jpg" alt="ok"/>
             </div>
             <p>Zgadzam się na przetwarzanie danych osobowych</p>
           </div>
@@ -208,16 +213,16 @@
         <div class="social">
           <div class="col sm_icons">
             <a href="#">
-              <img src="images/flickr.png" />
+              <img src="images/flickr.png" alt="flickr"/>
             </a>
             <a href="#">
-              <img src="images/vimeo.png" />
+              <img src="images/vimeo.png" alt="vimeo"/>
             </a>
             <a href="#">
-              <img src="images/pinterest.png" />
+              <img src="images/pinterest.png" alt="pinterest"/>
             </a>
             <a href="#">
-              <img src="images/twitter.png" />
+              <img src="images/twitter.png" alt="twitter"/>
             </a>
           </div>
           <p>sit <strong>on</strong> chair</p>
@@ -226,6 +231,7 @@
     </div>
   </footer>
 
+<script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
