Project_01_html-corrected

--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
               <span class="list-label">Wybierz rodzaj</span>
               <span class="list-arrow"></span>
               <ul id="chair-type" class="list-panel">
-                <li>Clair</li>
-                <li>Margarita</li>
-                <li>Selena</li>
+                <li>Chair Clair</li>
+                <li>Chair Margarita</li>
+                <li>Chair Selena</li>
               </ul>
             </div>
             <div class="dropdown-list">
