--- a/index.html
+++ b/index.html
@@ -218,17 +218,17 @@
               <label for="transport">Transport</label>
             </div>
           </div>
-
         </div>
 
         <div class="col image-part ">
           <img src="images/red_chair.png">
+          <img src="images/orange.png">
+          <img src="images/black_chair.png">
         </div>
 
         <div class="col summary-part">
           <h2>PODSUMOWANIE</h2>
           <span class="green-line"></span>
-
 
           <div class="summary-panel">
             <div class="panel-left">
